fixed overflow issue

--- a/client/src/components/request-block/request-block.css
+++ b/client/src/components/request-block/request-block.css
@@ -1,4 +1,5 @@
 .code-block {
   padding: 20px;
   text-align: left;
+  overflow: auto;
 }
